--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -730,6 +730,162 @@ body.modal-open {
   color: #b91313;
 }
 
+.section12 .accordion {
+  width: 100%;
+  max-width: 560px;
+  margin: 20px auto;
+}
+.section12 .accordion h1 {
+  cursor: pointer;
+  padding: 15px 20px;
+  background-color: #333;
+  font-family: Lobster;
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: #1abc9c;
+}
+.section12 .accordion h1:hover {
+  color: #4afcdc;
+}
+.section12 .accordion h1:first-child {
+  border-radius: 10px 10px 0 0;
+}
+.section12 .accordion h1:last-of-type {
+  border-radius: 0 0 10px 10px;
+}
+.section12 .accordion h1:not(:last-of-type) {
+  border-bottom: 1px dotted #1abc9c;
+}
+.section12 .accordion h2 {
+  padding: 5px 25px;
+  background-color: #1abc9c;
+  font-size: 1.1rem;
+  color: #333;
+}
+.section12 .accordion h2:hover {
+  background-color: #09ab8b;
+}
+.section12 .accordion div {
+  display: none;
+}
+.section12 .accordion p {
+  display: none;
+  padding: 15px 35px;
+  background-color: #ddd;
+  font-family: "Georgia";
+  font-size: 0.8rem;
+  color: #333;
+  line-height: 1.3rem;
+}
+.section12 .accordion h3 {
+  padding: 5px 30px;
+  background-color: #b94152;
+  font-size: 0.9rem;
+  color: #ddd;
+}
+.section12 .accordion h3:hover {
+  background-color: #a93142;
+}
+.section12 .accordion h4 {
+  padding: 5px 35px;
+  background-color: #ffc25a;
+  font-size: 0.9rem;
+  color: #af720a;
+}
+.section12 .accordion h4:hover {
+  background-color: #e0b040;
+}
+.section12 .accordion .opened-for-codepen {
+  display: block;
+}
+.section12 h2 {
+  cursor: pointer;
+}
+.section12 h3 {
+  cursor: pointer;
+}
+.section12 h4 {
+  cursor: pointer;
+}
+
+.section13 * {
+  margin: 0;
+  padding: 0;
+}
+.section13 .accordion {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+}
+.section13 .accordion h1, .section13 h2, .section13 h3, .section13 h4 {
+  cursor: pointer;
+}
+.section13 .accordion h2, .section13 h3, .section13 h4 {
+  font-family: "News Cycle";
+}
+.section13 .accordion h1 {
+  padding: 15px 20px;
+  background-color: #333;
+  font-family: Lobster;
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: #1abc9c;
+}
+.section13 .accordion h1:hover {
+  color: #4afcdc;
+}
+.section13 .accordion h1:first-child {
+  border-radius: 10px 10px 0 0;
+}
+.section13 .accordion h1:last-of-type {
+  border-radius: 0 0 10px 10px;
+}
+.section13 .accordion h1:not(:last-of-type) {
+  border-bottom: 1px dotted #1abc9c;
+}
+.section13 .accordion div, .section13 .accordion p {
+  display: none;
+}
+.section13 .accordion h2 {
+  padding: 10px 25px;
+  background-color: #d78006;
+  border-bottom: 1px dotted #676e72;
+  font-size: 1.1rem;
+  color: #fff;
+}
+.section13 .accordion h2:hover {
+  background-color: #ab4409;
+}
+.section13 .accordion h3 {
+  padding: 5px 30px;
+  background-color: #b94152;
+  font-size: 0.9rem;
+  color: #ddd;
+}
+.section13 .accordion h3:hover {
+  background-color: #a93142;
+}
+.section13 .accordion h4 {
+  padding: 5px 35px;
+  background-color: #ffc25a;
+  font-size: 0.9rem;
+  color: #af720a;
+}
+.section13 .accordion h4:hover {
+  background-color: #e0b040;
+}
+.section13 .accordion .desc {
+  padding: 15px 35px;
+  background-color: #ddd;
+  font-family: "Georgia";
+  font-size: 0.8rem;
+  color: #333;
+  line-height: 1.3rem;
+}
+.section13 .accordion .opened-for-codepen {
+  display: block;
+}
+
 @media screen and (max-width: 1248px) {
   .section06 .container-fluid .view-settings .text-above h6 {
     font-size: 1em;
