--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -840,90 +840,7 @@ body.modal-open {
   }
 }
 
-.section12 {
-  .accordion {
-    width: 100%;
-    max-width: 560px;
-    margin: 20px auto;
-    h1 {
-      cursor: pointer;
-      padding: 15px 20px;
-      background-color: #333;
-      font-family: Lobster;
-      font-size: 1.5rem;
-      font-weight: normal;
-      color: #1abc9c;
-      &:hover {
-        color: #4afcdc;
-      }
-      &:first-child {
-        border-radius: 10px 10px 0 0;
-      }
-      &:last-of-type {
-        border-radius: 0 0 10px 10px;
-      }
-      &:not(:last-of-type) {
-        border-bottom: 1px dotted #1abc9c;
-      }
-    }
-    h2 {
-      // font-family: "News Cycle";
-      padding: 5px 25px;
-      background-color: #1abc9c;
-      font-size: 1.1rem;
-      color: #333;
-      &:hover {
-        background-color: #09ab8b;
-      }
-    }
-    div {
-      display: none;
-    }
-    p {
-      display: none;
-      padding: 15px 35px;
-      background-color: #ddd;
-      font-family: "Georgia";
-      font-size: .8rem;
-      color: #333;
-      line-height: 1.3rem;
-    }
-    h3 {
-      padding: 5px 30px;
-      background-color: #b94152;
-      font-size: .9rem;
-      color: #ddd;
-      &:hover {
-        background-color: #a93142;
-      }
-    }
-    h4 {
-      padding: 5px 35px;
-      background-color: #ffc25a;
-      font-size: .9rem;
-      color: #af720a;
-      &:hover {
-        background-color: #e0b040;
-      }
-    }
-    .opened-for-codepen {
-      display: block;
-    }
-  }
-  h2 {
-    cursor: pointer;
-  }
-  h3 {
-    cursor: pointer;
-    // font-family: "News Cycle";
-  }
-  h4 {
-    cursor: pointer;
-    // font-family: "News Cycle";
-  }
-  
-  
-}
+
 
 .section13 {
   * {
@@ -956,7 +873,7 @@ body.modal-open {
     border-radius: 10px 10px 0 0;
   }
   .accordion h1:last-of-type {
-    border-radius: 0 0 10px 10px;
+    border-radius: 0 0;
   }
   .accordion h1:not(:last-of-type) {
     border-bottom: 1px dotted #1abc9c;
@@ -966,38 +883,38 @@ body.modal-open {
   }
   .accordion h2 {
     padding: 10px 25px;
-    background-color: #d78006;
+    background-color: rgb(207, 13, 133);
     border-bottom:1px dotted #676e72;
     font-size: 1.1rem;
     color: #fff;
   }
   .accordion h2:hover {
-    background-color: #ab4409;
+    background-color: rgb(230, 82, 173);
   }
   .accordion h3 {
-    padding: 5px 30px;
-    background-color: #b94152;
+    padding: 10px 30px;
+    background-color: rgb(251, 122, 140);
     font-size: .9rem;
-    color: #ddd; 
+    color: #000; 
   }
   .accordion h3:hover {
-    background-color: #a93142;
+    background-color: rgb(253, 149, 163);
   }
   .accordion h4 {
-    padding: 5px 35px;
-    background-color: #ffc25a;
+    padding: 15px 35px;
+    background-color: rgb(239, 144, 86);
     font-size: .9rem;
-    color: #af720a; 
+    color: #fff; 
   }
   .accordion h4:hover {
-    background-color: #e0b040;
+    background-color: rgb(255, 131, 54);
   }
   .accordion .desc {
     padding: 15px 35px;
-    background-color: #ddd;
+    background-color: rgb(255, 255, 255);
     font-family: "Georgia";
     font-size: .8rem;
-    color: #333;
+    color: #000;
     line-height: 1.3rem;
   }
   .accordion .opened-for-codepen {
